--- a/style.css
+++ b/style.css
@@ -5,10 +5,78 @@ body {
     padding: 0;
     justify-content: center;
     align-items: center;
+    background-color: #232619;
+    color: #F2F2F2;;
+}
+.title {
+    padding:1em;
+    font-size: 2em;
 }
 
-#container {
-width: 50%;
-display: block;
-margin: auto;
+
+#startGame {
+    padding: 1em;
 }
+#question {
+    padding: 1em;
+    color: #BCBFB0;
+}
+#container {
+    width: 50%;
+    display: block;
+    margin: auto;
+ 
+    }
+.question-list {
+        border: 2em;
+        border-color: #545942;
+        border-radius: 3em;
+        border-style: solid ;
+    }
+.row {
+        display: inline-block;
+        font-family: 'Roboto', sans-serif;
+        padding: 1em;
+        font-weight: bold;
+    }
+.btn {
+    padding: 2em;
+    border: solid .2em;
+    border-color: #545942;;
+    border-radius: 1em;
+    height: 1em;
+    width: 50%;
+    margin: 1em;
+    color: #BCBFB0;
+}
+.btn-1 {
+    padding: 1em;
+}
+
+.functions {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    padding: 2em;
+}
+
+Color Theme Swatches in Hex
+.The-Invasion.-Game-concept-1-hex { color: #232619; }
+.The-Invasion.-Game-concept-2-hex { color: #545942; }
+.The-Invasion.-Game-concept-3-hex { color: #888C79; }
+.The-Invasion.-Game-concept-4-hex { color: #BCBFB0; }
+.The-Invasion.-Game-concept-5-hex { color: #F2F2F2; }
+
+/* Color Theme Swatches in RGBA */
+.The-Invasion.-Game-concept-1-rgba { color: rgba(35, 38, 25, 1); }
+.The-Invasion.-Game-concept-2-rgba { color: rgba(84, 89, 66, 1); }
+.The-Invasion.-Game-concept-3-rgba { color: rgba(135, 140, 120, 1); }
+.The-Invasion.-Game-concept-4-rgba { color: rgba(187, 191, 175, 1); }
+.The-Invasion.-Game-concept-5-rgba { color: rgba(242, 242, 242, 1); }
+
+/* Color Theme Swatches in HSLA */
+.The-Invasion.-Game-concept-1-hsla { color: hsla(73, 20, 12, 1); }
+.The-Invasion.-Game-concept-2-hsla { color: hsla(73, 14, 30, 1); }
+.The-Invasion.-Game-concept-3-hsla { color: hsla(73, 7, 51, 1); }
+.The-Invasion.-Game-concept-4-hsla { color: hsla(73, 10, 72, 1); }
+.The-Invasion.-Game-concept-5-hsla { color: hsla(0, 0, 95, 1); }
