--- a/style.css
+++ b/style.css
@@ -1,119 +1,143 @@
 body {
-    text-align: center;
-    font-family: 'Press Start 2P', cursive;
-    margin: 0;
-    padding: 0;
-    justify-content: center;
-    align-items: center;
-    background-color: #232619;
-    color: #F2F2F2;;
+  text-align: center;
+  font-family: "Press Start 2P", cursive;
+  margin: 0;
+  padding: 0;
+  justify-content: center;
+  align-items: center;
+  background-color: #232619;
+  color: #f2f2f2;
 }
 .title {
-    padding:1em;
-    font-size: 2em;
+  padding: 1em;
+  font-size: 2em;
 }
-
 
 #startGame {
-    padding: 1em;
+  padding: 1em;
 }
 #question {
-    padding: 1em;
-    color: #BCBFB0;
+  padding: 1em;
+  color: #bcbfb0;
 }
 
 #container {
-    width: 50%;
-    display: block;
-    margin: auto;
- 
-    }
+  width: 50%;
+  display: block;
+  margin: auto;
+}
 #question-list {
-        border: .5em;
-        border-color: #545942;
-        border-radius: 3em;
-        border-style: solid ;
-        box-shadow: 0 0 10px 2px;
-   
-    }
-    .hide{
-        display:none;
-    }
+  border: 0.5em;
+  border-color: #545942;
+  border-radius: 3em;
+  border-style: solid;
+  box-shadow: 0 0 10px 2px;
+}
+.hide {
+  display: none;
+}
+.hide2 {
+    display: none;
+}
 .row {
-        display: inline-block;
-        font-family: 'Roboto', sans-serif;
-        padding: 1em;
-        font-weight: bold;
-      
-    }
-    #question {
-        padding: 1em;
-    }
+  display: inline-block;
+  font-family: "Roboto", sans-serif;
+  padding: 1em;
+  font-weight: bold;
+}
+#question {
+  padding: 1em;
+}
 .btn {
-    padding: 2em;
-    
-    background-color: #F2F2F2;
-    height: 1em;
-    width: 50%;
-    margin: 1em;
-    color: #232619;
-    border-radius: 1em;
-    font-weight: bold;
-    box-shadow: 0 0 10px 2px;
+  padding: 2em;
+
+  background-color: #f2f2f2;
+  height: 1em;
+  width: 50%;
+  margin: 1em;
+  color: #232619;
+  border-radius: 1em;
+  font-weight: bold;
+  box-shadow: 0 0 10px 2px;
 }
 .btn:hover {
-    border: #F2163E solid 2px;
-  
+  border: #f2163e solid 2px;
 }
 button {
-    padding: 2em;
-    opacity: .3;
-    background-color: #F2F2F2;
-    height: 1em;
-    width: 50%;
-    margin: 1em;
-    color: #232619;
-    border-radius: 1em;
-    
+  padding: 2em;
+  opacity: 0.3;
+  background-color: #f2f2f2;
+  height: 1em;
+  width: 50%;
+  margin: 1em;
+  color: #232619;
+  border-radius: 1em;
 }
 
 .btn-1 {
-    padding: 1em;
+  padding: 1em;
 }
 
 .functions {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    padding: 2em;
-    
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  padding: 2em;
 }
 body.correct {
-    background-color:#545942;
-  }
-  
-  body.wrong {
-   background-color:#8C0303;
-  }
-  
+  background-color: #545942;
+}
 
-Color Theme Swatches in Hex
-.The-Invasion.-Game-concept-1-hex { color: #232619; }
-.The-Invasion.-Game-concept-2-hex { color: #545942; }
-.The-Invasion.-Game-concept-3-hex { color: #888C79; }
-.The-Invasion.-Game-concept-4-hex { color: #BCBFB0; }
-.The-Invasion.-Game-concept-5-hex { color: #F2F2F2; }
+body.wrong {
+  background-color: #8c0303;
+}
+
+Color Theme Swatches in Hex .The-Invasion.-Game-concept-1-hex {
+  color: #232619;
+}
+.The-Invasion.-Game-concept-2-hex {
+  color: #545942;
+}
+.The-Invasion.-Game-concept-3-hex {
+  color: #888c79;
+}
+.The-Invasion.-Game-concept-4-hex {
+  color: #bcbfb0;
+}
+.The-Invasion.-Game-concept-5-hex {
+  color: #f2f2f2;
+}
 
 /* Color Theme Swatches in RGBA */
-.The-Invasion.-Game-concept-1-rgba { color: rgba(35, 38, 25, 1); }
-.The-Invasion.-Game-concept-2-rgba { color: rgba(84, 89, 66, 1); }
-.The-Invasion.-Game-concept-3-rgba { color: rgba(135, 140, 120, 1); }
-.The-Invasion.-Game-concept-4-rgba { color: rgba(187, 191, 175, 1); }
-.The-Invasion.-Game-concept-5-rgba { color: rgba(242, 242, 242, 1); }
+.The-Invasion.-Game-concept-1-rgba {
+  color: rgba(35, 38, 25, 1);
+}
+.The-Invasion.-Game-concept-2-rgba {
+  color: rgba(84, 89, 66, 1);
+}
+.The-Invasion.-Game-concept-3-rgba {
+  color: rgba(135, 140, 120, 1);
+}
+.The-Invasion.-Game-concept-4-rgba {
+  color: rgba(187, 191, 175, 1);
+}
+.The-Invasion.-Game-concept-5-rgba {
+  color: rgba(242, 242, 242, 1);
+}
 
 /* Color Theme Swatches in HSLA */
-.The-Invasion.-Game-concept-1-hsla { color: hsla(73, 20, 12, 1); }
-.The-Invasion.-Game-concept-2-hsla { color: hsla(73, 14, 30, 1); }
-.The-Invasion.-Game-concept-3-hsla { color: hsla(73, 7, 51, 1); }
-.The-Invasion.-Game-concept-4-hsla { color: hsla(73, 10, 72, 1); }
-.The-Invasion.-Game-concept-5-hsla { color: hsla(0, 0, 95, 1); }
+.The-Invasion.-Game-concept-1-hsla {
+  color: hsla(73, 20, 12, 1);
+}
+.The-Invasion.-Game-concept-2-hsla {
+  color: hsla(73, 14, 30, 1);
+}
+.The-Invasion.-Game-concept-3-hsla {
+  color: hsla(73, 7, 51, 1);
+}
+.The-Invasion.-Game-concept-4-hsla {
+  color: hsla(73, 10, 72, 1);
+}
+.The-Invasion.-Game-concept-5-hsla {
+  color: hsla(0, 0, 95, 1);
+}
