--- a/style.css
+++ b/style.css
@@ -41,11 +41,21 @@ body {
   border-radius: 3em;
   border-style: solid;
   box-shadow: 0 0 10px 2px;
+  margin-top: 1.5em;
+}
+.box {
+background-color: #888c79;
+border-color: #888c79;
+color: #232619;
+font-weight: bold;
 }
 .hide {
   display: none;
 }
 .hide2 {
+    display: none;
+}
+.hide3 {
     display: none;
 }
 .grid {
@@ -66,22 +76,44 @@ body {
  align-items: center;
  justify-content: center;
 }
+#form {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
 .btn:hover {
   border: #f2163e solid 2px;
   box-shadow: 0 0 10px 2px;
 }
+#btnForm:hover {
+  border: #232619 solid 2px;
+  box-shadow: 0 0 10px 2px;
+}
+
 button {
   padding: 2em;
   opacity: 0.3;
   background-color: #f2f2f2;
   height: 1em;
-  
   margin: 1em;
   color: #232619;
   border-radius: 1em;
   flex-direction: row;
 }
+#btnForm {
+  padding: 1em;
+  opacity: .2;
+  background-color: #888c79;
+  font-family:"Press Start 2P", cursive ;
+  margin: 1.5em 0 0em 2em;
+  height: 5em;
+  color: #232619;
+  border-radius: 1em;
+  border-color: #232619;
+}
+.box {
 
+}
 .btn-1 {
   padding: 1em;
 }
