--- a/style.css
+++ b/style.css
@@ -41,13 +41,16 @@ body {
   border-radius: 3em;
   border-style: solid;
   box-shadow: 0 0 10px 2px;
-  margin-top: 1.5em;
+  margin-top: .5em;
 }
 .box {
 background-color: #888c79;
 border-color: #888c79;
 color: #232619;
 font-weight: bold;
+}
+#bestScore {
+  padding: 1.5em;
 }
 .hide {
   display: none;
